--- a/cssimgfiles/css/style.css
+++ b/cssimgfiles/css/style.css
@@ -1426,6 +1426,8 @@ th, td {
   padding: 12px 15px;
   text-align: left;
   border-bottom: 1px solid #dee2e6;
+  color: black; /* Set text color to black */
+
 }
 
 th {
